<resources>

    <!--Strings for login_activity -->
    <string name="app_name">FocusRead</string>
    <string name="welcome">Welcome to Focus Read</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="privacy">Privacy</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_member">Not a member yet?</string>

    <!--Strings for forgot_password_activity -->
    <string name="forgot_password_title">FORGOT PASSWORD?</string>
    <string name="forgot_password_bio">please enter your email address. check your inbox to reset your password</string>
    <string name="send_btn">SEND RESET</string>
    <string name="forgot_hint">user@email.com</string>


    <!-- Strings for home_screen_activity-->
    <string name="book_list_btn">View Book List</string>
    <string name="add_new_book_btn">Add New Book</string>
    <string name="read_reminder_btn">Set Read Reminder</string>
    <string name="view_stats_btn">View Stats</string>
    <string name="logout_btn">Logout</string>

    <!--Strings for add_book_activity -->
    <string name="add_book_header">Add Book to List</string>
    <string name="book_title_input">Book Title</string>
    <string name="book_author_input">Book Author</string>
    <string name="nop_input">No. of Pages</string>
    <string name="noc_input">No. of Chapters</string>
    <string name="number_of_chapters">Number of Chapters</string>
    <string name="add_book_btn">Add Book To List</string>
    <string name="home_btn">Return to Home Screen</string>

    <!--Strings for register_activity -->
    <string name="create_account">Create an Account</string>
    <string name="user_agreement">By creating an account you agree to our</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--Strings for user_agreement_activity -->
    <string name="user_agreement_title">User Agreement</string>
    <string name="user_agreement_page">to be filled user agreement</string>
    <string name="user_agreement_back_btn">Back</string>

    <!--Strings for privacy_policy_activity -->
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_page">to be filled privacy</string>
    <string name="privacy_btn">Back</string>

    <!--Strings for confirm_reg_detail_activity -->
    <string name="confirm_reg_detail_title">Confirm your details</string>
    <string name="confirm_reg_detail_bio1">Almost there! We sent an email to:</string>
    <string name="confirm_reg_detail_email">-useremail@mail.com-</string>
    <string name="confirm_reg_detail_bio2">Please click on the link to confirm your details and finish registering. You may need to check your spam folder.</string>
    <string name="no_email_text">Cant find the email?</string>
    <string name="resend_btn">Resend Email</string>
    <string name="go_to_login">Go to Login</string>

    <!--Strings for congrats_activity -->
    <string name="congrats_title">Congratulations!</string>
    <string name="congrats_bio">You are now a verified member of Focus Read</string>
    <string name="congrats_btn">Lets Get Started</string>

    <!--Strings for book_add_success_activity -->
    <string name="book_add_success_title">Book\n Successfully Added To List</string>
    <string name="place_holder_tv">Place Holder</string>
    <string name="start_read_btn">Start Read</string>
    <string name="add_another_book_btn">Add Another Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="number_of_pages">Number of Pages</string>

    <!--Strings for book_list_activity -->
    <string name="book_list_title">Book List</string>

    <!--Strings for setup_read_activity -->
    <string name="setup_title">Set Start Point</string>

    <!--Strings for read_in_progress_read_activity -->
    <string name="read_title">Reading in Progress</string>
    <string name="pause_btn">Pause Read</string>
    <string name="continue_btn">Continue Read</string>
    <string name="end_btn">End Read</string>


    <string name="session_finished_title">Session Finished</string>
    <string name="started_from">Starting Page:</string>
    <string name="target">Target End Page:</string>
    <string name="end_page">Ended on page:</string>
    <string name="log_read_btn">Log the Read</string>

    <!--Strings for read_logged_activity -->
    <string name="Pages_read">Number of Pages Read:</string>

    <!--Strings for session_finished_Activity -->
    <string name="read_logged_title">Your Read Session has been Logged</string>
    <string name="view_stats_screen_btn">View Stat Screen</string>
    <string name="set_reminder_btn">Set Reminder for Next Read Session</string>

    <!--Strings for book_detail_stats_Activity -->
    <string name="view_stats_title">View Stats</string>

    <!--Strings for set_reminder_Activity -->
    <string name="set_reminder_title">Next Read Reminder</string>
    <string name="set_reminder_info">Set a reminder by simply selecting the day then the time you want to schedule your next read reminder below</string>
    <string name="start_from">Starting Page</string>
    <string name="set_target">Set Target End Page</string>
    <string name="select_date_btn">Select Date</string>
    <string name="select_time_btn">Select Time</string>
    <string name="set_btn">Set</string>
    <string name="cancel_btn">Cancel</string>

    <!--Strings for end_read_dialog -->
    <string name="end_dialog_title">Focus Read</string>
    <string name="end_dialog_bio">Are you sure you want to end the read session?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>

    <!--Strings for confirm_book_details_dialog -->
    <string name="book_dialog_title">Focus Read</string>
    <string name="book_dialog_bio">Confirm Book Details are Correct</string>

    <!--Strings for confirm_read_logged -->
    <string name="target_hit_txt">Congratulations!! \n You it your target</string>
    <string name="target_not_hit_txt">Sorry, You didn\'t hit \n your target this time.</string>

    <!--Strings for stat_card -->
    <string name="stat_reading_time_txt">Reading Time:</string>
    <string name="stat_pages_read_txt">Pages Read:</string>

    <!--Strings for ready_dialog -->
    <string name="are_you_ready_title_txt">Are You Ready To Begin?</string>
    <string name="are_you_ready_bio_txt">Make sure you have your book open and at the correct page. Also anything else you need to read, before starting the timer.</string>
    <string name="im_ready_btn">Im Ready!</string>

</resources>