<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fblue"
    tools:context=".ConfirmRegDetailsActivity">

    <TextView
        android:id="@+id/confirmRegDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/confirm_reg_detail_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewEmail"
        android:layout_width="100dp"
        android:layout_height="99dp"
        android:layout_marginTop="32dp"
        android:background="@color/fblue"
        android:src="@android:drawable/ic_dialog_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmRegDetailTitle"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/confirmRegBio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_reg_detail_bio1"
        android:textColor="#3E2723"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEmail" />

    <TextView
        android:id="@+id/userRegEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_reg_detail_email"
        android:textColor="#3E2723"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmRegBio1" />

    <TextView
        android:id="@+id/confirmRegBio2"
        android:layout_width="253dp"
        android:layout_height="64dp"
        android:layout_marginTop="46dp"
        android:text="@string/confirm_reg_detail_bio2"
        android:textAlignment="center"
        android:textColor="#3E2723"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRegEmail" />

    <TextView
        android:id="@+id/noEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/no_email_text"
        android:textColor="#3E2723"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmRegBio2" />

    <Button
        android:id="@+id/noEmailBtn"
        android:layout_width="178dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/resend_btn"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noEmailTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>