<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/f_blue"
    tools:context=".BookAddSuccessActivity">

    <ImageView
        android:id="@+id/logo_2"
        android:layout_width="156dp"
        android:layout_height="93dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fr_logo2"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/bookSuccessTitle"
        android:layout_width="277dp"
        android:layout_height="135dp"
        android:layout_marginTop="12dp"
        android:text="@string/book_add_success_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/placeHolder"
        android:layout_width="306dp"
        android:layout_height="149dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/place_holder_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookSuccessTitle"
        android:autofillHints="" />

    <Button
        android:id="@+id/startReadBtn"
        android:layout_width="298dp"
        android:layout_height="79dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_read_btn"
        android:textAlignment="center"
        android:textSize="16sp"
        app:icon="@drawable/start_read_icon_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeHolder" />

    <Button
        android:id="@+id/view_book_list_btn"
        android:layout_width="297dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:background="@color/fpurple"
        android:text="@string/book_list_btn"
        android:textSize="16sp"
        app:icon="@drawable/book_icon_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startReadBtn" />

    <Button
        android:id="@+id/add_new_book_btn"
        android:layout_width="298dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:background="@color/fpurple"
        android:text="@string/add_new_book_btn"
        android:textSize="16sp"
        app:icon="@drawable/add_icon_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_book_list_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>